--- a/styles/main.css
+++ b/styles/main.css
@@ -94,7 +94,8 @@ body > .container > section#content > p {
 	text-align: justify;
 }
 
-body > .container > section#content > p img {
+body > .container > section#content > img {
 	display: block;
-	margin: 15px -15px 15px -15px;
+	width: 100%;
+	margin: 15px 0 15px 0;
 }
